ingress-01.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-svc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx
  namespace: my-svc
spec:
  selector:
    matchLabels:
      app: my-nginx
  replicas: 3    
  template:
    metadata:
      labels:
        app: my-nginx
    spec:
      containers:
       - name: my-nginx
         image: nginx
         ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-nginx
  namespace: my-svc
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: my-nginx
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: my-svc
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /testpath
        backend:
          serviceName: my-nginx
          servicePort: 80
